EVINCE BACKPORTS: libview: Do not create annotation window twice.

Backported by Peter Moser <pitiz29a@gmail.com>

Taken from:
https://gitlab.gnome.org/GNOME/evince/commit/932b22ba7f

commit 932b22ba7f9f793e81399ae3992dcae1dd0f876c
Author: Jose Aliste <jaliste@src.gnome.org>
Date:   Tue Jul 26 13:57:25 2016 -0300

    libview: Do not create annotation window twice.

    Currently, in button_release_event we always create the annotation window. Since
    there is a chance that draw event will show the annotation windows (and in that
    case creates annotation windows if they don't exist) then the annotation window
    will be created twice. This causes a leak because we only destroy one of these windows...
    and also when removing annotations with the window open we don't destroy the window
    (we destroy a window which is already hidden).

    The solution here is to check in button_release wether a window has been already created
    for the annotation, and only if not, create the new annotation window.

    https://bugzilla.gnome.org/show_bug.cgi?id=769200